--- a/style.css
+++ b/style.css
@@ -1,172 +1,185 @@
+/* font-family: 'Caveat', cursive;
+font-family: 'Lato', sans-serif;
+font-family: 'Open Sans', sans-serif;
+font-family: 'Permanent Marker', cursive;
+font-family: 'Nanum Gothic Coding', monospace;
+font-family: 'Roboto', sans-serif; */
 
 .navbar {
-    font-family: 'Open Sans', sans-serif !important;
+    font-family: 'Open Sans', sans-serif;
     font-size: 14px;
     font-weight: 500;
     text-transform: uppercase;
     letter-spacing: 0.1rem;
     background-color:rgba(0,0,0,0.4);
+    margin-bottom: 20%;
 }
-.background .img-fluid{
+.background {
+    background-color: aliceblue;
     width: 100%;
+    display:flex;
+    position: relative;
+    padding-top:10%;
+    padding-bottom:5%;
 }
-@media only screen and (max-width: 768px) {
-    .heading-content{
-        margin-top: -180px;
-        font-size: xx-small;
-    }
-    .navbar-toggler{
-        float: right;
-    }
-  }
+#img-fluid{
+    margin-left:10%;
+    width:28vw;
+}
+
 
 .heading-content{
-    position: absolute;
-    top: 45%;
-    width: 100%;
-    max-width: 100%;
-}
-
-.heading-content h5{
-    font-size: 2em;
-    font-weight: 300;
-    font-family: 'Lato';
-    color: rgb(245, 245, 245);
-}
-.heading-content h1{
-    font-size: 4em;
-    font-weight:400;
-    letter-spacing: 0.02rem;
-    color: rgb(245, 245, 245);
-    font-family: 'Open Sans';
-}
-.heading-content p{
-    font-size: 1.2em;
-    font-style: oblique;
-    color: rgb(245, 245, 245);
-    font-family: 'Open Sans';
-}
-
-.post-heading h3{
-    margin-top: 50px;
-    font-size: 2em;
-    font-family: 'Bebas Neue';
-    color: rgb(75, 75, 75);
-    text-decoration: underline;
-    text-underline-position: under;
-}
-.about .img-fluid{
-    border-radius: 10px 100px;
-    height: 400px;
-    width: 80%;
-    margin: 50px 70px 50px;
-}
-.about .row p{
-    font-family: 'Caveat';
-    font-weight: lighter;
-    font-size: 1.7em;
-    color: rgb(75, 75, 75);
-    margin: 50px 70px 50px;
-}
-
-.skills .parallax-header{
-    margin-top: 100px;
-    background: #000;
-    background: linear-gradient(
-        rgba(0,0,0,0.3),
-        rgba(0,0,0,0.3)
-    ),
-    url(img/hongkong2.jpg);
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size:cover;
-}
-
-.skills .card{
-    background-color: rgb(168, 168, 168);
-    border-radius: 10%;
-    margin: 100px auto;
-    border-style: hidden;
-    max-width: 18em;
-    max-height: 20em;
-}
-.skills .card-header{
-    font-family: 'Permanent Marker';
+    font-family: 'Lato', sans-serif;
+    margin-top: 10%;
+    margin-left:10%;
+    font-size: 3vw;
     font-weight: 800;
-    text-transform: uppercase;
-}
-.skills .card-text{
-    margin:-10px 0 20px;
-    font-family: 'Montserrat';
-    font-size: 1.2em;
-}
-.skills .progress-bar{
-    background-color: rgb(80, 80, 80);
+    color: #000;
+    transition: all 1s;
 }
 
-.experience .parallax-header{
-    margin-top: 70px;
-    background: #000;
-    background: linear-gradient(
-        rgba(0,0,0,0.3),
-        rgba(0,0,0,0.3)
-    ),
-    url(img/hongkong3.jpg);
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size:cover;
+.post-heading {
+    font-size: 3.5vw;
+    font-family: 'Nanum Gothic Coding', monospace;
+    color: rgb(75, 75, 75);
+    padding-top:5%;
+    padding-bottom:5%;
 }
-.experience .card{
-    background-color: rgb(165, 165, 165);
-    border-radius: 20%;
-    max-width: 30em;
-    height: 26em;
-    margin: 120px auto;
+
+.about{
+    padding-bottom:5%;
 }
-.experience .card-text{
-    margin: 25px 10px 20px;
+.about .intro{
+    text-align:left; 
+    font-family:'Roboto';
+    margin-left:5%;
+    margin-right:5%;
+    font-weight: 200;
+    font-size: 2vw;
+    color: rgb(75, 75, 75);
+
+}
+
+.experience{
+    background-color: #f6f6f6;
+}
+
+.internship{
+    display:flex;
+    padding-bottom: 10%;
+}
+
+
+#ptImg {
+    margin-right: 5%;
+    width:44%;
+}
+#internImg {
+    margin-left:5%;
+    margin-right:5%;
+    width:40%;
+}
+
+.card-text{
+    padding-bottom: 5%;
+    padding-left: 5%;
+    margin-right: 5%;
+    font-family: 'Noto Sans', sans-serif;
 }
 .experience .card-text h2{
-    font-size: 1.7em;
-    font-family:'Smooch Sans';
-    font-weight: bold;
+    font-size: 3vw;
+    font-weight: 400;
 }
 .experience .card-text h4{
-    font-size: 1.2em;
-    font-family: 'Smooch Sans';
+    font-size: 1.6vw;
+    font-weight: 200;
 }
 .experience .card-text h5{
-    font-size: 0.9em;
-    color: #f0f0f0;
-    font-family: 'Smooch Sans';
+    font-size: 1.8vw;  
+    font-weight: 300;
+    font-style: italic;
+    color: #828282;
 }
-.experience .img-fluid{
-    margin: 10px auto;
-    margin-bottom: -40px !important;
+
+.skills{
+    background-color: rgb(253, 253, 253);
+}
+.skill-header{
+    margin-left: 5%;
+    padding-bottom: 1%;
+    font-size: 2.3vw;
+    font-family: 'Caveat', sans-serif;
+}
+
+.skill-boxes{
+    display: flex;
+    flex-wrap: wrap;
+    padding-bottom: 5%;
+
+}
+.skill-box{
+    display: flex;
+    flex-direction: column;
+    margin-left: 5%;
+    margin-right: 5%;
+    width: 40%;
+}
+.skill-subTitle{
+    font-size: 2vw;
+    font-family: 'Lato', sans-serif;
+
+}
+.skills .progress-bar{
+    background-color: #7DB7FF;
+}
+.skill-others{
+    font-family:'Roboto';
+    font-weight: 200;
+    font-size: 2.4vw;
+    color: rgb(75, 75, 75);
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-bottom: 5%;
+}
+
+
+
+
+.contact{
+    background-color: rgb(243, 243, 243);
+    padding-bottom: 10%;
+}
+.contact_box{
+    display: flex;
+}
+.contact-headers{
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 2.5vw;
+    font-weight: 300;
+    font-style: italic;
+    display: flex;
+    margin-left: 5%;
+    /* margin-right: 5%; */
+    border-right: 1px solid black;
+    width: 45%;
+    flex-direction: column;
+    
+}
+.snsIcons{
+    margin-left: 5%;
+    display: flex;
+    width: 40%;
+    /* background: #000; */
+    justify-content: space-evenly;
     align-items: center;
-    border-radius: 40%;
-    border-style: none;
-    width:12em;
-    height:11em;
 }
-footer {
-    background: #061D25;
-    padding: 10px 0;
-    text-align: center;
+.contact-header{
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-bottom: 1%;
 }
-footer a {
-    color: #70726F;
-    font-size: 20px;
-    padding: 10px;
-}
-.contact span{
-    font-size: 1.6em;
-    font-family: 'Lobster';
-}
-.contact .contactBox{
-    font-family: 'Lato';
-    background-color: rgb(199, 199, 199);
-    margin: -25px 0 -18px;
+
+
+.contact .fa{
+    margin-left: 5%;
 }
