--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ font-family: 'Roboto', sans-serif; */
     display: flex;
     margin-left: 5%;
     /* margin-right: 5%; */
-    border-right: 1px solid black;
+    border-right: 1px solid rgb(202, 202, 202);
     width: 45%;
     flex-direction: column;
     
@@ -183,3 +183,62 @@ font-family: 'Roboto', sans-serif; */
 .contact .fa{
     margin-left: 5%;
 }
+@media only screen and (max-width: 768px) {
+    .background {
+        height:50vw;
+
+    }
+    #img-fluid{
+        width:35vw;
+    }
+
+    .heading-content{
+        margin-top:5%;
+        font-size: 1.1rem;
+
+    }
+    .post-heading {
+        font-size:5vw;
+
+    }
+    .about .intro{
+        font-size: 3vw;
+    }
+    .ui{
+        flex-direction: column-reverse;
+    }
+    .ws{
+        flex-direction: column;
+    }
+    #ptImg, #internImg {
+        margin-left: 25%;
+        width: 50%;
+    }
+    .experience .card-text h2{
+        font-size: 3.7vw;
+    }
+    .experience .card-text h4{
+        font-size: 2.4vw;
+    }
+    .experience .card-text h5{
+        font-size: 2.8vw;  
+    }
+
+    .skill-header{
+        font-size: 3.7vw;
+    }
+    .skill-subTitle{
+        font-size: 3vw;
+        font-family: 'Lato', sans-serif;
+    }
+    .skill-others{
+        font-size: 3vw;
+    }
+    .contact-header{
+        font-size: 3vw;
+    }
+    .snsIcons{
+
+        width: 40%;
+    }
+  }
