--- a/style.css
+++ b/style.css
@@ -194,8 +194,12 @@ font-family: 'Roboto', sans-serif; */
 
     .heading-content{
         margin-top:5%;
+        margin-right: 5%;
         font-size: 1.1rem;
 
+    }
+    .card-text{
+        padding-bottom: 1%;
     }
     .post-heading {
         font-size:5vw;
@@ -213,6 +217,9 @@ font-family: 'Roboto', sans-serif; */
     #ptImg, #internImg {
         margin-left: 25%;
         width: 50%;
+    }
+    .experience{
+        padding-bottom: 5%;
     }
     .experience .card-text h2{
         font-size: 3.7vw;
@@ -238,7 +245,6 @@ font-family: 'Roboto', sans-serif; */
         font-size: 3vw;
     }
     .snsIcons{
-
         width: 40%;
     }
   }
