--- a/style.css
+++ b/style.css
@@ -23,8 +23,10 @@ font-family: 'Roboto', sans-serif; */
     padding-bottom:5%;
 }
 #img-fluid{
+    border-radius: 80% 80% 80% 80%;
     margin-left:10%;
-    width:28vw;
+    width:30vw;
+    height: 30vw;
 }
 
 
