--- a/style.css
+++ b/style.css
@@ -32,12 +32,24 @@ font-family: 'Roboto', sans-serif; */
 
 }
 
+.scroll-container {
+    height: 100vh;
+    overflow-y: scroll;
+    scroll-behavior: smooth;
+}
+
+/* Add more styles for your sections as needed */
+
+/* Style for your sections */
+.section {
+    padding: 20px;
+}
 
 .heading-content {
     font-family: 'Lato', sans-serif;
     margin-top: 10%;
     margin-left: 10%;
-    font-size: 3vw;
+    font-size: 2.8vw;
     font-weight: 800;
     color: #000;
     display: inline-block;
@@ -243,7 +255,7 @@ font-family: 'Roboto', sans-serif; */
     .heading-content {
         margin-top: 5%;
         margin-right: 5%;
-        font-size: 1.1rem;
+        font-size: 20px;
 
     }
 
